# yomihon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_ATTRIBUTION.md  README.md  gradle.properties  settings.gradle.kts
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: 1_request_feature.yml  2_report_issue.yml  config.yml
.github/workflows/: build.yml  release.yml  update_website.yml
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/mihon/data/ocr/: OcrRepositoryImplTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/eu/kanade/domain/: DomainModule.kt
app/src/main/java/eu/kanade/domain/dictionary/: DictionaryPreferences.kt
app/src/main/java/eu/kanade/presentation/dictionary/: DictionarySearchScreen.kt  FrequencyFormatter.kt  GlossaryContent.kt  GlossaryTable.kt  GlossaryUtils.kt  PitchAccentFormatter.kt  PitchAccentGraph.kt
app/src/main/java/eu/kanade/presentation/manga/: MangaScreen.kt
app/src/main/java/eu/kanade/presentation/more/: MoreScreen.kt
app/src/main/java/eu/kanade/presentation/reader/: OcrResultBottomSheet.kt  OcrResultOverlay.kt  OcrResultPopup.kt  OcrSelectionOverlay.kt
app/src/main/java/eu/kanade/presentation/webview/: WebViewScreenContent.kt
app/src/main/java/eu/kanade/tachiyomi/: App.kt
app/src/main/java/eu/kanade/tachiyomi/di/: PreferenceModule.kt
app/src/main/java/eu/kanade/tachiyomi/network/: TrustedFileDownloader.kt
app/src/main/java/mihon/core/migration/migrations/: Migrations.kt  SetupDictionaryOcrPresentationMigration.kt
app/src/main/java/mihon/feature/ocr/: OcrModelExtensions.kt
app/src/main/res/drawable/: ic_ankidroid.xml  ic_mihon.xml
app/src/test/java/eu/kanade/presentation/dictionary/: GlossaryUtilsTest.kt
app/src/test/java/mihon/domain/dictionary/model/: DictionaryTermCardTest.kt
core/common/: build.gradle.kts
core/common/src/main/kotlin/tachiyomi/core/common/: Constants.kt
data/: build.gradle.kts
data/src/androidTest/java/mihon/data/panel/: PanelDetectionRepositoryImplTest.kt
data/src/main/cpp/: CMakeLists.txt  ocr_inference.cpp  ocr_inference.h  ocr_native.cpp
data/src/main/java/mihon/data/ankidroid/: AnkiDroidRepositoryImpl.kt
data/src/main/java/mihon/data/dictionary/: DictionaryMapper.kt  DictionaryParserImpl.kt  DictionaryRepositoryImpl.kt  DictionarySearchGatewayImpl.kt  HoshiDictionaryStore.kt  LegacyDictionaryArchiveBuilder.kt  SimpleJsonWriter.kt
data/src/main/java/mihon/data/ocr/: DetOcrEngine.kt  FastOcrEngine.kt  FastVocab.kt  FastVocabPart000.kt  FastVocabPart001.kt  GlensOcrEngine.kt  LegacyOcrEngine.kt  OcrCacheStore.kt  OcrEngine.kt  OcrEngineLocks.kt  OcrRepositoryImpl.kt  OwOcrEngine.kt  PrioritizedTaskQueue.kt  TextPostprocessor.kt  Vocab.kt
data/src/main/java/mihon/data/panel/: PanelDetectionRepositoryImpl.kt
data/src/main/java/tachiyomi/data/source/: SavedSearchRepositoryImpl.kt
data/src/main/sqldelight-ocr/tachiyomi/data/ocr/: ocr_cache.sq
data/src/main/sqldelight/tachiyomi/data/: dictionary.sq  saved_search.sq
data/src/main/sqldelight/tachiyomi/migrations/: 10.sqm  7.sqm  9.sqm
data/src/test/java/mihon/data/ankidroid/: AnkiDroidRepositoryImplTest.kt
data/src/test/java/mihon/data/dictionary/: LegacyDictionaryArchiveBuilderTest.kt
data/src/test/java/mihon/data/ocr/: OcrEngineLocksTest.kt  PrioritizedTaskQueueTest.kt
domain/src/main/java/mihon/domain/ankidroid/interactor/: AddDictionaryCard.kt  FindExistingAnkiNotes.kt
domain/src/main/java/mihon/domain/ankidroid/repository/: AnkiDroidRepository.kt
domain/src/main/java/mihon/domain/dictionary/audio/: DictionaryAudio.kt  DictionaryAudioPlayer.kt  DictionaryAudioRepository.kt
domain/src/main/java/mihon/domain/dictionary/css/: CssParser.kt
domain/src/main/java/mihon/domain/dictionary/exception/: DictionaryImportException.kt
domain/src/main/java/mihon/domain/dictionary/model/: Dictionary.kt  (+5 more)
gradle/: libs.versions.toml
i18n/: README.md
i18n/src/commonMain/moko-resources/base/: strings.xml
scripts/: adb-wireless
source-local/src/androidMain/kotlin/tachiyomi/source/local/: LocalSource.kt
telemetry/src/firebase/kotlin/mihon/telemetry/: TelemetryConfig.kt
(+141 files in other folders)
